src/main/webapp/bundles/utilities/less/logos.less
/**
	In other journeys (car, home etc), the logo is floated beside the product detail, instead of in its own row.
	Hence we need to add these extra styles.
*/
@providers-list: ~"ACTEWAGL", ~"ALINTA_ENERGY", ~"CLICK_ENERGY", ~"ENERGYAUSTRALIA", ~"ONLINE_POWER_AND_GAS", ~"ORIGIN", ~"PEOPLE_ENERGY", ~"POWERSHOP", ~"SIMPLY_ENERGY", ~"SUMO_POWER";

.companyLogo {
  display:block;
  float: none;
  margin: 0 auto;
}

.companyLogo {
	 .providersHighResSpriteImages(~"utilities"; ~"logo_"; @providers-list; @logo-xs-scale; ~"");
}

@media (@sm) {
	.companyLogo {
		.providersHighResSpriteImages(~"utilities"; ~"logo_"; @providers-list; @logo-xs-scale; ~"");
	}
}

